[project]
name = "rptree"
version = "0.1.0"
description = "RP Tree, a directory tree generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/callmeeric5/rptree"
Issues = "https://github.com/callmeeric5/rptree/issues"

[project.scripts]
rptree = "rptree.cli:main"

[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"
